# GPT-Function-Calling-Utility

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publishpackage.yaml
examples/: async_functions.py  custom_converters.py  discord_bot.py  single_call.py
src/gptfunctionlib/: __init__.py  functionlib.py
src/gptfunctionutil/: __init__.py  converter.py  converter_core.py  convertutil.py  errors.py  functionlib.py  functionlib_discord.py  logger.py  single_call.py  types.py  util.py
tests/: conftest.py  test_methods.py
