[metadata]
name = gptfunctionutil
version = 0.1
license = MIT
author = Crosswave Omega
author_email = xtream2pro@gmail.com
description = A simple package for the purpose of providing a set of utilities that make it easier to invoke python methods and discord.py commands with the OpenAI Function Calling API
keywords = discord.py, OpenAI, Function Calling API
url = "https://github.com/CrosswaveOmega/GPT-Function-Calling-Utility"

[options]
python_requires = >=3.10
packages = find:
install_requires =
    discord.py

[options.packages.find]
exclude =
    tests
    docs
